[tool.poetry]
name = "kae-testing-dbt"
version = "0.1.0"
description = "Testing"
authors = ["Marcos Alcozer <marcos@alcozer.dev>", "Zander Stachniak <zander@alcozer.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
dbt-bigquery = "^1.6.7"

[tool.poetry.group.dev.dependencies]
sqlfluff = "^3.1"
sqlfluff-templater-dbt = "^3.1"
ruff = "^0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".git",
    ".git-rewrite",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pypackages__",
    "_build",
    ".sqlfluff",
]

line-length = 88

target-version = "py39"
